--- a/pubs.html
+++ b/pubs.html
@@ -46,6 +46,9 @@
       span.note{
         font-weight: bold;
       }
+      span.addendum{
+        font-weight: bold;
+      }
       /*.note {
         color: green;
         font-size: small;
@@ -185,6 +188,7 @@
                 class="if year"><span
                   class="year"></span>.</span>
               <span class="if note">(<span class="note"></span>) </span>
+              <span class="if addendum">(<span class="addendum"></span>) </span>
               <span class="if url"><a class="bibtexVar" href="+URL+" extra="url">[URL]</a></span>
               <span class="if doi"><a class="bibtexVar" href="+DOI+" extra="doi">[DOI]</a></span>
               <span class="if software"><a class="bibtexVar" href="+SOFTWARE+" extra="software">[Software]</a></span>
