fix the publication counting

--- a/pubs.html
+++ b/pubs.html
@@ -76,6 +76,9 @@
         margin-inline-end: 0px;
         color: green;
       }
+      span.bibtex_search_stats {
+        color: Tomato;
+      }
       [class="Lei Li"] {
         font-weight: bold;
       }
@@ -117,6 +120,7 @@
             type="text">
           <span class="help-block">Example: journal 2015 (finds the intersection
             of the two terms)</span> </div>
+          <span class="bibtex_search_stats">0</span> results
       </div>
     </div>
     <div class="bibtex_structure">
@@ -139,7 +143,7 @@
               <a class="bibtexVar" href="pubs/+BIBTEXKEY+.pdf"
                 extra="BIBTEXKEY"><span style="text-decoration: underline;" class="title"></span></a>,
             </span>
-            <div class="if author"><span class="author" conjunction=", and"><span class="first"></span><span class="last"> </span></span></div>
+            <div class="if author"><span class="author" conjunction=", and"><span class="first"></span><span class="last"> </span></span>.</div>
             <div> 
               <span class="if journal">
                 <em>
