--- a/pubs.html
+++ b/pubs.html
@@ -65,7 +65,7 @@
         white-space: pre-wrap;
         hyphens: auto;
         word-break: keep-all;
-        font-size:13px;
+        font-size:15px;
       }
       span.comment {
         display: block;
@@ -111,8 +111,11 @@
 							bibtex_search" style="border: 1px solid lightgrey;" search="topic">
             <option value="">Search Topic</option>
             <!-- Add topic values here -->
-            <option value="question answering">Question Answering</option>
-            <option value="Vision">Vision</option>
+            <option value="sentence generation">Text Generation</option>
+            <option value="probabilsitic inference|probabilistic models">Probabilistic Inference</option>
+            <option value="question answering|machine reading comprehension">Question Answering</option>
+            <option value="time series|time sequences">Time Series Analysis</option>
+            <option value="object detection|segmentation|visual">Vision</option>
           </select>
         </div>
         <div style="float:left;"> <input class="bibtex_search form-control" id="searchbar"
@@ -218,7 +221,8 @@
             </div>
             <div class="bibtexVar collapse" id="bib+BIBTEXKEY+" extra="BIBTEXKEY">
               <div>
-                <pre><span class="bibtextypekey raw" style="text-transform:lowercase"></span>{<span class="bibtexkey raw"></span>,
+                <pre><span class="bibtexraw noread raw"></span></pre>
+                <!-- <pre><span class="bibtextypekey raw" style="text-transform:lowercase"></span>{<span class="bibtexkey raw"></span>,
   author = <span class="author raw"></span>,
   title = "<span class="title raw"></span>",<span class="if booktitle">
   booktitle = "<span class="booktitle raw"></span>",</span><span class="if journal">
@@ -230,7 +234,7 @@
   number = "<span class="number raw"></span>",</span><span class="if pages">
   pages = "<span class="pages raw"></span>",</span><span class="if edition">
   edition = "<span class="edition raw"></span>",</span>
-}</pre>
+}</pre> -->
               </div>
             </div>
             <div class="bibtexVar collapse" id="abs+BIBTEXKEY+" extra="BIBTEXKEY">
