adding aistats paper

--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
           </p>
           <h3>News</h3>
           <ul>
+            <img src="images/new-icon.gif" style="height:1.2em" />1 paper
+            accepted to AIStats 2020, about density ratio estimation for text generation.</a>.
+          </ul>
+          <ul>
             <img src="images/new-icon.gif" style="height:1.2em" /> 2 papers
-            accepted at ICLR 2020, about mirror generative model to unite language modelling and machine translation, and learning data-to-text generation templates via a variational method even without parallel corpus</a>.
+            accepted at ICLR 2020, about <a href="pubs/zheng2020mirror.pdf">mirror generative model  to unite language modelling and machine translation</a>, and <a href="pubs/ye2020variational.pdf">learning data-to-text generation templates via a variational method even without parallel corpus</a>.
           </ul>
           <ul>
             <img src="images/new-icon.gif" style="height:1.2em" /> 4 papers
-            accepted at AAAI 2020, about pretraining method for neural machine translation, text editing, and approximate second order optimization</a>.
+            accepted at AAAI 2020, about pretraining method for neural machine translation, text editing, and approximate second order optimization.
           </ul>
           <ul>
             <img src="images/new-icon.gif" style="height:1.2em" /> 1 paper
