--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <div class="col c10">
           <h1> <a href="index.html">Lei Li</a> </h1>
           Director <br />
-          <a href="http://ailab.bytedance.com">ByteDance AI Lab</a> </div>
+          <a href="http://ailab.bytedance.com">ByteDance AI Lab</a> <br />
+          Beijing, Shanghai & Mountain View. <br />
+          We have open positions of researchers, software engineers, and interns on machine learning, NLP, and robotics. 
+        </div>
       </div>
       <div class="row">
         <div class="col c2 alignleft">
