--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <h1> <a href="index.html">Lei Li</a> </h1>
           Director <br />
           <a href="http://ailab.bytedance.com">ByteDance AI Lab</a> <br />
-          Beijing, Shanghai & Mountain View. <br />
+          You are welcome to visit our office located in <a href="https://goo.gl/maps/czu7qBEL8B8fjGXb6">the center of Mountain View, California</a>, as well as offices in Beijing and Shanghai.<br />
           We have open positions of researchers, software engineers, and interns on machine learning, NLP, and robotics. 
         </div>
       </div>
