--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div class="col c2"> <img src="leili-pic.jpg" alt="" width="160" /> </div>
         <div class="col c10">
           <h1> <a href="index.html">Lei Li</a> </h1>
-          Director <br />
+          Director<br />
           <a href="http://ailab.bytedance.com">ByteDance AI Lab</a> <br />
-          You are welcome to visit our office located in <a href="https://goo.gl/maps/czu7qBEL8B8fjGXb6">the center of Mountain View, California</a>, as well as offices in Beijing and Shanghai.<br />
-          We have open positions of researchers, software engineers, and interns on machine learning, NLP, and robotics. 
+          You are welcome to visit our lab located in <a href="https://goo.gl/maps/czu7qBEL8B8fjGXb6">the center of Mountain View, California</a>, as well as offices in <a href="https://goo.gl/maps/uVThh4uUbKHRU9UR6">Beijing</a> and <a href="https://goo.gl/maps/53dcSxVevQkXQEtZ6">Shanghai</a>.<br />
+          We have multiple open positions of researchers, software engineers, and interns on machine learning, NLP, and robotics. 
         </div>
       </div>
       <div class="row">
