--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
           </p>
           <h3>News</h3>
           <ul>
+            <img src="images/new-icon.gif" style="height:1.2em" />1 paper and 1 demo
+            accepted to ACL 2020, about tailoring pretrained language model and the robot reporter Xiaomingbot.</a>.
+          </ul>
+          <ul>
             <img src="images/new-icon.gif" style="height:1.2em" />1 paper
             accepted to AIStats 2020, about density ratio estimation for text generation.</a>.
           </ul>
