--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             accepted to ACL 2020, about tailoring pretrained language model and the robot reporter Xiaomingbot.
           </ul>
           <ul>
+            <img src="images/new-icon.gif" style="height:1.2em" />I am giveing a talk at ICLR 2020 about Learning Deep Latent Models for Text Sequences. You may watch <a href="https://iclr.cc/virtual/expo_2.html">here</a>.
+          </ul>
+          <ul>
             <img src="images/new-icon.gif" style="height:1.2em" />1 paper
             accepted to AIStats 2020, about density ratio estimation for text generation.
           </ul>
