update home page with talks

--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
           <h1> <a href="index.html">Lei Li</a> </h1>
           Director<br />
           <a href="http://ailab.bytedance.com">ByteDance AI Lab</a> <br />
-          You are welcome to visit our lab located in <a href="https://goo.gl/maps/czu7qBEL8B8fjGXb6">the center of Mountain View, California</a>, as well as offices in <a href="https://goo.gl/maps/uVThh4uUbKHRU9UR6">Beijing</a> and <a href="https://goo.gl/maps/53dcSxVevQkXQEtZ6">Shanghai</a>.<br />
-          We have multiple open positions of researchers, software engineers, and interns on machine learning, NLP, and robotics. 
-        </div>
+          You are welcome to visit our lab located in <a href="https://goo.gl/maps/czu7qBEL8B8fjGXb6">the
+            center of Mountain View, California</a>, as well as offices in <a href="https://goo.gl/maps/uVThh4uUbKHRU9UR6">Beijing</a>
+          and <a href="https://goo.gl/maps/53dcSxVevQkXQEtZ6">Shanghai</a>.<br />
+          We have multiple open positions of researchers, software engineers,
+          and interns on machine learning, NLP, and robotics. (email me at the
+          address below)</div>
       </div>
+      
       <div class="row">
         <div class="col c2 alignleft">
           <ul class="menu">
@@ -30,48 +34,66 @@
             <li> <a href="research.html">Research</a> </li>
             <li> <a href="software.html">Software</a> </li>
             <li> <a href="lilei-cv.pdf">Resume</a> </li>
-            <li> <a href="leili-bio.html">Bio</a> </li>
+            <li> <a href="leili-bio.html">Bio</a></li>
           </ul>
         </div>
+        
         <div class="main col c10">
-          <p> I am a research scientist working at ByteDance AI Lab. I am developing scalable algorithms to learn and mine knowledge from data, with applications in NLP, machine translation, and time series analysis.  <br />
+          <p> I am a research scientist working at ByteDance AI Lab. I am
+            developing scalable algorithms to learn and mine knowledge from
+            data, with applications in NLP, machine translation, and time series
+            analysis. <br />
           </p>
           <h3>News</h3>
           <ul>
-            <img src="images/new-icon.gif" style="height:1.2em" />1 paper and 1 demo
-            accepted to ACL 2020, about tailoring pretrained language model and the robot reporter Xiaomingbot.
+            <img src="images/new-icon.gif" style="height:1.2em" />1 paper and 1
+            demo accepted to ACL 2020, about tailoring pretrained language model
+            and the robot reporter Xiaomingbot.
           </ul>
           <ul>
-            <img src="images/new-icon.gif" style="height:1.2em" />I am giveing a talk at ICLR 2020 about Learning Deep Latent Models for Text Sequences. You may watch <a href="https://iclr.cc/virtual/expo_2.html">here</a>.
+            <img src="images/new-icon.gif" style="height:1.2em" />I am giving a
+            talk at ICLR 2020 about Learning Deep Latent Models for Text
+            Sequences. You may watch <a href="https://iclr.cc/virtual/expo_2.html">here</a>.
           </ul>
           <ul>
             <img src="images/new-icon.gif" style="height:1.2em" />1 paper
-            accepted to AIStats 2020, about density ratio estimation for text generation.
+            accepted to AIStats 2020, about density ratio estimation for text
+            generation.
           </ul>
           <ul>
             <img src="images/new-icon.gif" style="height:1.2em" /> 2 papers
-            accepted at ICLR 2020, about <a href="pubs/zheng2020mirror.pdf">mirror generative model  to unite language modelling and machine translation</a>, and <a href="pubs/ye2020variational.pdf">learning data-to-text generation templates via a variational method even without parallel corpus</a>.
+            accepted at ICLR 2020, about <a href="pubs/zheng2020mirror.pdf">mirror
+              generative model to unite language modelling and machine
+              translation</a>, and <a href="pubs/ye2020variational.pdf">learning
+              data-to-text generation templates via a variational method even
+              without parallel corpus</a>.
           </ul>
           <ul>
             <img src="images/new-icon.gif" style="height:1.2em" /> 4 papers
-            accepted at AAAI 2020, about pretraining method for neural machine translation, text editing, and approximate second order optimization.
+            accepted at AAAI 2020, about pretraining method for neural machine
+            translation, text editing, and approximate second order
+            optimization.
           </ul>
           <ul>
             <img src="images/new-icon.gif" style="height:1.2em" /> 1 paper
-            accepted at NeurIPS 2019, about <a href="pubs/miao2019kernelized.pdf">contextualized embedding for text generation and how we use kernels to model distribution and variance of word embeddings</a>. see you in Vancouver.
+            accepted at NeurIPS 2019, about <a href="pubs/miao2019kernelized.pdf">contextualized
+              embedding for text generation and how we use kernels to model
+              distribution and variance of word embeddings</a>. see you in
+            Vancouver.
           </ul>
           <ul>
-            <img src="images/new-icon.gif" style="height:1.2em" /> <a href="https://lili-mou.github.io/emnlp2019-dnlp.html">EMNLP 2019 Tutorial on Discreteness in NLP</a>
+            <img src="images/new-icon.gif" style="height:1.2em" /> <a href="https://lili-mou.github.io/emnlp2019-dnlp.html">EMNLP
+              2019 Tutorial on Discreteness in NLP</a>
           </ul>
           <ul>
             <img src="images/new-icon.gif" style="height:1.2em" /> 1 paper
-            accepted at INLG 2019. It is about <a href="pubs/fu2019rethinking.pdf">the style transfer for text
-            generation </a>.
+            accepted at INLG 2019. It is about <a href="pubs/fu2019rethinking.pdf">the
+              style transfer for text generation </a>.
           </ul>
           <ul>
             <img src="images/new-icon.gif" style="height:1.2em" /> 1 paper
-            accepted at EMNLP 2019, about <a href="pubs/wang2019towards.pdf">linear time neural
-            machine translation</a>. 
+            accepted at EMNLP 2019, about <a href="pubs/wang2019towards.pdf">linear
+              time neural machine translation</a>.
           </ul>
           <ul>
             <img src="images/new-icon.gif" style="height:1.2em" /> 2 papers
@@ -124,7 +146,9 @@
           Email: &lt;the first part of this website&gt; +  gmail server address.
         </div>
       </div>
-      <div id="footer"> Last updated: $Date:: 2018-09-01#$ by $Author: leili $ </div>
+      <div id="footer">
+        <a href="publications.html" style="color: white;">Publications</a>
+      Last updated: $Date:: 2020-05-01#$ by $Author: leili $ </div>
     </div>
     <!-- Start of StatCounter Code for Default Guide -->
     <script type="text/javascript">
