feat(paper): support nest sort by year and topic

--- a/pubs.html
+++ b/pubs.html
@@ -38,6 +38,7 @@
 	    #bibtex_errors { margin-top:10px; color: red;}
 	    h1.header {margin-left:8px;}
 	    h1.YEAR { font-size: 17px; font-weight: bold; display: inline; margin-left:8px;}
+      h2.TOPIC { font-size: 15px; font-weight: bold; display: inline; margin-left:8px;}
       pre {
         white-space: pre-wrap;
         hyphens: auto;
@@ -131,7 +132,9 @@
           <a href="#top" style="display: inline"><em>(Top
               of the page)</em></a>
           <div style="padding-bottom:10px;"></div>
-          <div class="templates"></div>
+          <div class="group topic" extra="DESC string">
+            <div class="templates"></div>
+          </div>
           <!-- div class="sort month" extra="DESC date">
             
           </div -->
