adding emnlp tutorial

--- a/research.html
+++ b/research.html
@@ -1,4 +1,104 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">  <head>    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />    <meta name="description" content="Lei Li" />    <meta name="keywords" content="machine learning deep learning probabilistic programming" />    <meta name="author" content="Lei Li" />    <link rel="stylesheet" type="text/css" href="style/origo.css" title="Origo"      media="all" />    <link rel="stylesheet" type="text/css" href="style/style.css" media="screen" />    <title>Lei LI</title>  </head>  <body class="blue light freestyle01">    <div id="layout">      <div class="row smaller">        <div class="col c2"> <img src="leili-pic.jpg" alt="" width="160" /> </div>        <div class="col c10">          <h1> <a href="index.html">Lei Li</a> </h1>          ByteDance AI Lab </div>      </div>      <div class="row">        <div class="col c2 alignleft">          <ul class="menu">            <li> <a href="index.html">Home</a> </li>            <li> <a href="pubs.html">Papers</a> </li>            <li> <a class="current" href="research.html">Research</a> </li>            <li> <a href="software.html">Software</a> </li>            <li> <a href="lilei-cv.pdf">Resume</a> </li>            <li> <a href="leili-bio.html">Bio</a> </li>          </ul>        </div>        <div class="main col c10">          <div id="column2" role="doc-conclusion">            <h1>Research Projects</h1>            <h2>Intelligent Writing and Deep Text Generation</h2>            <ul>              <li>Xiaomingbot: an intelligent news-writing robot. [<a href="https://xiaomingbot.github.io">Demo</a>]</li>            </ul>            <h2>Probabilistic programming languages and Bayesian inference</h2>            <ul>              <li> <a href="http://bayesianlogic.cs.berkeley.edu/">Bayesian                  Logic (BLOG)</a> and its inference system. </li>            </ul>            <h2>Time series learning</h2>            <ul>              <li>Intracranial modeling</li>              <li> Human motion and motion capture analysis (finished) <a href="mocap.stitch/index.html">natural
-                  motion stitching</a> </li>              <li>data center monitoring (finished)</li>              <li> <a href="mlds/index.html">Tensor time series</a> </li>            </ul>            <h2>Parallel/Distributed machine learning</h2>            <ul>              <li> <a href="paralearn/index.html"> Parallel algorithms for                  graphical model on multicore </a> : (finished) </li>            </ul>            <h2>Network analysis</h2>            <ul>              <li>social network and social media analysis</li>              <li> <a href="http://www.db.cs.cmu.edu/db-site/Projects/cdem">CDEM</a>                :fly embryo gene pattern mining. (finished) </li>            </ul>            <h1>Talks and Tutorial</h1>            <ul>              <li>ICLR 2020 Talk on Learning Deep Latent Models for Text                Sequences. [<a href="https://iclr.cc/virtual_2020/expo_2.html">Video</a>]                [<a href="TALKS/learning%20deep%20latent%20models%20for%20text%20sequences%20-%20ICLR%202020.pdf">Slides</a>]              </li>              <li><a href="https://lili-mou.github.io/emnlp2019-dnlp.html">EMNLP                  2019 Tutorial on Discreteness in NLP</a>. </li>              <li> <a href="https://xxx">CCF-ADL107/NLPCC 2019 Tutorial on Deep                  Generative Models for Text Generation</a>. </li>              <li>BLOG language and compiled inference. Computer Science                department, Stanford University, Tsinghua University, 2015.<br />              </li>              <li>2015 Invited Keynote at China Computer Federation Young                Computer Scientists and Engineers Forum: Deep Learning – Towards                More Intelligent Machines.<br />              </li>              <li>2014 PPAML Summer School, <a href="http://bayesianlogic.github.io/download/BLOG-tutorial-2014.pdf">lecture
-                  on BLOG</a> . </li>              <li> 2013 TAMU <a href="http://cesg.tamu.edu/seminar/fishbowl-teleseminar-fast-algorithms-for-mining-co-evolving-time-series/">Fish
-                  Bowl Seminar</a> </li>              <li> <a href="TALKS/2010-KDD/">KDD 2010 Tutorial on Time Series</a>              </li>              <li> Parsimonious Linear Fingerprinting for time series, Machine                learning lunch seminar, CMU, Nov, 2010. [ <a href="TALKS/plif-mltalk2010.pdf">PPT</a>                ] <br />              </li>              <li> Fast Algorithms for Mining Co-evolving Time Series. SMU, NUS,                SJTU, Dec 2009. [ <a href="TALKS/leili-talk09-SMU.pdf">PPT</a>                ] </li>              <li> Fast Algorithms for Mining and Summarizing Co-evolving                Sequences, HKUST. 2009.[ <a href="http://www.cse.ust.hk/pg/seminars/F09/li.html">Poster</a>                ] </li>              <li> Machine Learning Lunch seminar, CMU, Oct 6, 2008. [ <a href="docs/li-mllunch08.pdf">PPT</a>                ] </li>            </ul>          </div>        </div>      </div>    </div>  </body></html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="description" content="Lei Li" />
+    <meta name="keywords" content="machine learning deep learning probabilistic programming" />
+    <meta name="author" content="Lei Li" />
+    <link rel="stylesheet" type="text/css" href="style/origo.css" title="Origo"
+      media="all" />
+    <link rel="stylesheet" type="text/css" href="style/style.css" media="screen" />
+    <title>Lei LI</title>
+  </head>
+  <body class="blue light freestyle01">
+    <div id="layout">
+      <div class="row smaller">
+        <div class="col c2"> <img src="leili-pic.jpg" alt="" width="160" /> </div>
+        <div class="col c10">
+          <h1> <a href="index.html">Lei Li</a> </h1>
+          ByteDance AI Lab </div>
+      </div>
+      <div class="row">
+        <div class="col c2 alignleft">
+          <ul class="menu">
+            <li> <a href="index.html">Home</a> </li>
+            <li> <a href="pubs.html">Papers</a> </li>
+            <li> <a class="current" href="research.html">Research</a> </li>
+            <li> <a href="software.html">Software</a> </li>
+            <li> <a href="lilei-cv.pdf">Resume</a> </li>
+            <li> <a href="leili-bio.html">Bio</a> </li>
+          </ul>
+        </div>
+        <div class="main col c10">
+          <div id="column2" role="doc-conclusion">
+            <h1>Research Projects</h1>
+            <h2>Intelligent Writing and Deep Text Generation</h2>
+            <ul>
+              <li>Xiaomingbot: an intelligent news-writing robot. [<a href="https://xiaomingbot.github.io">Demo</a>]</li>
+            </ul>
+            <h2>Probabilistic programming languages and Bayesian inference</h2>
+            <ul>
+              <li> <a href="http://bayesianlogic.cs.berkeley.edu/">Bayesian
+                  Logic (BLOG)</a> and its inference system. </li>
+            </ul>
+            <h2>Time series learning</h2>
+            <ul>
+              <li>Intracranial modeling</li>
+              <li> Human motion and motion capture analysis (finished) <a href="mocap.stitch/index.html">natural
+                  motion stitching</a> </li>
+              <li>data center monitoring (finished)</li>
+              <li> <a href="mlds/index.html">Tensor time series</a> </li>
+            </ul>
+            <h2>Parallel/Distributed machine learning</h2>
+            <ul>
+              <li> <a href="paralearn/index.html"> Parallel algorithms for
+                  graphical model on multicore </a> : (finished) </li>
+            </ul>
+            <h2>Network analysis</h2>
+            <ul>
+              <li>social network and social media analysis</li>
+              <li> <a href="http://www.db.cs.cmu.edu/db-site/Projects/cdem">CDEM</a>
+                :fly embryo gene pattern mining. (finished) </li>
+            </ul>
+            <h1>Talks and Tutorial</h1>
+            <ul>
+              <li>ICLR 2020 Talk on Learning Deep Latent Models for Text
+                Sequences. [<a href="https://iclr.cc/virtual_2020/expo_2.html">Video</a>]
+                [<a href="TALKS/learning%20deep%20latent%20models%20for%20text%20sequences%20-%20ICLR%202020.pdf">Slides</a>]
+              </li>
+              <li><a href="TALKS/2019-EMNLP">EMNLP
+                  2019 Tutorial on Discreteness in NLP</a>. </li>
+              <li> <a href="https://xxx">CCF-ADL107/NLPCC 2019 Tutorial on Deep
+                  Generative Models for Text Generation</a>. </li>
+              <li>BLOG language and compiled inference. Computer Science
+                department, Stanford University, Tsinghua University, 2015.<br />
+              </li>
+              <li>2015 Invited Keynote at China Computer Federation Young
+                Computer Scientists and Engineers Forum: Deep Learning – Towards
+                More Intelligent Machines.<br />
+              </li>
+              <li>2014 PPAML Summer School, <a href="http://bayesianlogic.github.io/download/BLOG-tutorial-2014.pdf">lecture
+                  on BLOG</a> . </li>
+              <li> 2013 TAMU <a href="http://cesg.tamu.edu/seminar/fishbowl-teleseminar-fast-algorithms-for-mining-co-evolving-time-series/">Fish
+                  Bowl Seminar</a> </li>
+              <li> <a href="TALKS/2010-KDD/">KDD 2010 Tutorial on Time Series</a>
+              </li>
+              <li> Parsimonious Linear Fingerprinting for time series, Machine
+                learning lunch seminar, CMU, Nov, 2010. [ <a href="TALKS/plif-mltalk2010.pdf">PPT</a>
+                ] <br />
+              </li>
+              <li> Fast Algorithms for Mining Co-evolving Time Series. SMU, NUS,
+                SJTU, Dec 2009. [ <a href="TALKS/leili-talk09-SMU.pdf">PPT</a>
+                ] </li>
+              <li> Fast Algorithms for Mining and Summarizing Co-evolving
+                Sequences, HKUST. 2009.[ <a href="http://www.cse.ust.hk/pg/seminars/F09/li.html">Poster</a>
+                ] </li>
+              <li> Machine Learning Lunch seminar, CMU, Oct 6, 2008. [ <a href="docs/li-mllunch08.pdf">PPT</a>
+                ] </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
